After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 711393 - vimeo: Don't leak cache directories
vimeo: Don't leak cache directories
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-04 11:02 UTC by Bastien Nocera
Modified: 2013-12-13 20:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vimeo: Don't leak cache directories (2.02 KB, patch)
2013-11-04 11:02 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-11-04 11:02:50 UTC
.
Comment 1 Bastien Nocera 2013-11-04 11:02:58 UTC
Created attachment 258912 [details] [review]
vimeo: Don't leak cache directories

Temporary cache directories were never removed on exit because
an instance of GrlNetWc was never unref'ed because a GVimeo instance
was never unref'ed because GrlVimeoSource lacked a finalize method.

Add a finalize method to remove empty cache directories on exit.
Comment 2 Juan A. Suarez Romero 2013-11-05 08:10:40 UTC
commit a23a28414d65c8ae61e809d78c9960d0c32676bb
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Nov 4 12:00:26 2013 +0100

    vimeo: Don't leak cache directories
    
    Temporary cache directories were never removed on exit because
    an instance of GrlNetWc was never unref'ed because a GVimeo instance
    was never unref'ed because GrlVimeoSource lacked a finalize method.
    
    Add a finalize method to remove empty cache directories on exit.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=711393

 src/vimeo/grl-vimeo.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Comment 3 Bastien Nocera 2013-12-13 20:14:35 UTC
*** Bug 710185 has been marked as a duplicate of this bug. ***