vimeo: Don't leak cache directories

Temporary cache directories were never removed on exit because
an instance of GrlNetWc was never unref'ed because a GVimeo instance
was never unref'ed because GrlVimeoSource lacked a finalize method.

Add a finalize method to remove empty cache directories on exit.

https://bugzilla.gnome.org/show_bug.cgi?id=711393